--- a/notebooks/G4Health/French_commune_distance_with_postal_code.ipynb
+++ b/notebooks/G4Health/French_commune_distance_with_postal_code.ipynb
@@ -427,6 +427,198 @@
    "execution_count": null,
    "source": "",
    "id": "4dc625d73b2b754c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 1.3 Prepare for osrm distance\n",
+    "\n",
+    "As the osrm api takes only string coordinates, so we need to prepare the matrix with string latitude, and longitude"
+   ],
+   "id": "9e7fe429f1ff2aa2"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-18T14:10:11.083869Z",
+     "start_time": "2025-07-18T14:10:10.854445Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "tmp_df.show(5, truncate=False)",
+   "id": "50f8b9e95d8f8c7b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+-----------------------+-----------+-----------------------+-------+------------------------------------+------------------+-----------------+\n",
+      "|code_commune_insee|nom_de_la_commune      |code_postal|libelle_d_acheminement |ligne_5|_geopoint                           |lat               |lon              |\n",
+      "+------------------+-----------------------+-----------+-----------------------+-------+------------------------------------+------------------+-----------------+\n",
+      "|01001             |L ABERGEMENT CLEMENCIAT|01400      |L ABERGEMENT CLEMENCIAT|NULL   |46.15170180297285,4.930600521664882 |46.15170180297285 |4.930600521664882|\n",
+      "|01002             |L ABERGEMENT DE VAREY  |01640      |L ABERGEMENT DE VAREY  |NULL   |46.00713099777772,5.42467488805381  |46.00713099777772 |5.42467488805381 |\n",
+      "|01004             |AMBERIEU EN BUGEY      |01500      |AMBERIEU EN BUGEY      |NULL   |45.957470664713995,5.370568254510258|45.957470664713995|5.370568254510258|\n",
+      "|01005             |AMBERIEUX EN DOMBES    |01330      |AMBERIEUX EN DOMBES    |NULL   |45.99922938293103,4.911871787269484 |45.99922938293103 |4.911871787269484|\n",
+      "|01006             |AMBLEON                |01300      |AMBLEON                |NULL   |45.74831432147182,5.592784714407381 |45.74831432147182 |5.592784714407381|\n",
+      "+------------------+-----------------------+-----------+-----------------------+-------+------------------------------------+------------------+-----------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 29
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-18T14:19:16.456820Z",
+     "start_time": "2025-07-18T14:19:16.272316Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "commune_df= tmp_df.select(\"code_commune_insee\",\"nom_de_la_commune\",\"code_postal\",\"lon\",\"lat\").withColumnsRenamed(rename_map)\n",
+    "commune_df.show(5, truncate=False)"
+   ],
+   "id": "a46f9bee9fa417f7",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-----------------------+-----------+-----------------+------------------+\n",
+      "|code_insee|commune_name           |code_postal|lon              |lat               |\n",
+      "+----------+-----------------------+-----------+-----------------+------------------+\n",
+      "|01001     |L ABERGEMENT CLEMENCIAT|01400      |4.930600521664882|46.15170180297285 |\n",
+      "|01002     |L ABERGEMENT DE VAREY  |01640      |5.42467488805381 |46.00713099777772 |\n",
+      "|01004     |AMBERIEU EN BUGEY      |01500      |5.370568254510258|45.957470664713995|\n",
+      "|01005     |AMBERIEUX EN DOMBES    |01330      |4.911871787269484|45.99922938293103 |\n",
+      "|01006     |AMBLEON                |01300      |5.592784714407381|45.74831432147182 |\n",
+      "+----------+-----------------------+-----------+-----------------+------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 30
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-18T14:19:44.460172Z",
+     "start_time": "2025-07-18T14:19:44.454239Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "commune_df.printSchema()",
+   "id": "5c8bc4d4685170f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- code_insee: string (nullable = true)\n",
+      " |-- commune_name: string (nullable = true)\n",
+      " |-- code_postal: string (nullable = true)\n",
+      " |-- lon: double (nullable = true)\n",
+      " |-- lat: double (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 31
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-18T14:21:31.436379Z",
+     "start_time": "2025-07-18T14:21:26.761297Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "distinct_code_postal_count = commune_df.select(\"code_postal\").distinct().count()",
+   "id": "a67fd8b4479b6fc1",
+   "outputs": [],
+   "execution_count": 32
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-18T14:21:46.613518Z",
+     "start_time": "2025-07-18T14:21:46.413232Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "total_count = commune_df.count()",
+   "id": "df17e82a0f63e388",
+   "outputs": [],
+   "execution_count": 33
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-18T14:22:11.040366Z",
+     "start_time": "2025-07-18T14:22:06.514412Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "distinct_code_insee_count = commune_df.select(\"code_insee\").distinct().count()",
+   "id": "4cddddb9f831ba82",
+   "outputs": [],
+   "execution_count": 34
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-18T14:22:35.550371Z",
+     "start_time": "2025-07-18T14:22:35.541763Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(f\"insee code count: {distinct_code_insee_count}\")\n",
+    "print(f\"total code count: {total_count}\")\n",
+    "print(f\"postal code count: {distinct_code_postal_count}\")"
+   ],
+   "id": "3351617fdb8da9e5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insee code count: 35007\n",
+      "total code count: 39192\n",
+      "postal code count: 6328\n"
+     ]
+    }
+   ],
+   "execution_count": 35
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-18T14:51:16.700750Z",
+     "start_time": "2025-07-18T14:51:16.002814Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "output_path = data_dir / \"tmp\" / \"fr_commune_code_postal_centroid_double\"\n",
+    "commune_df.coalesce(1).write.mode(\"overwrite\").parquet(output_path.as_posix()) \\\n"
+   ],
+   "id": "41455fa6f343c0a9",
+   "outputs": [],
+   "execution_count": 36
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "ad8a9eb0acc45c3f"
   }
  ],
  "metadata": {
