add check special route for paris, lyon, marseil arrondisement

--- a/notebooks/G4Health/French_extra_routes_with_spec_commune_.ipynb
+++ b/notebooks/G4Health/French_extra_routes_with_spec_commune_.ipynb
@@ -90,7 +90,7 @@
     "\n",
     "# build a sedona session (sedona = 1.7.2) offline\n",
     "spark = SparkSession.builder \\\n",
-    "    .appName(\"SedonaParquetExample\") \\\n",
+    "    .appName(\"build_extra_routes_with_spec_commune\") \\\n",
     "    .master(\"local[*]\") \\\n",
     "    .config(\"spark.jars\", jar_path) \\\n",
     "    .getOrCreate()"
